--- a/src/componentes/Banner/Banner.css
+++ b/src/componentes/Banner/Banner.css
@@ -1,7 +1,9 @@
 .banner {
     background-color: #6278F7;
+    display: flex;
+    justify-content: center;
 }
 
 .banner img{
-    max-width: 100%;
+    max-width: 100%;    
 }
