--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,15 +1,23 @@
 .botao {
     background-color: #6278F7;
-    width: 30%;
+    width: 24%;
     height: 8%;
     margin-top: 24px;
     border-radius: 5px;
     border: none;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 700;
     color: #fff;
 }
 
 .botao:hover {
     background-color: #206fb9 ;
+}
+
+@media (max-width: 480px) {
+    .botao {
+        font-size: 14px;
+        width: 40%;
+        height: 6%;
+    }
 }
